force-app/main/default/objects/IntegrationLog__c/IntegrationLog__c.object-meta.xml
<CustomObject>
    <label>Log de Integración</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log de Integración</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>