force-app/main/default/objects/IntegrationLog__c/fields/case__c.field-meta.xml
<CustomField>
    <fullName>case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Log de Integración</relationshipLabel>
    <relationshipName>Log_de_Integraci_n</relationshipName>
    <type>Lookup</type>
</CustomField>