force-app/main/default/objects/IntegrationLog__c/fields/customer__c.field-meta.xml
<CustomField>
    <fullName>customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Log de Integración</relationshipLabel>
    <relationshipName>Log_Integracion</relationshipName>
    <type>Lookup</type>
</CustomField>