force-app/main/default/objects/IntegrationLog__c/fields/data__c.field-meta.xml
<CustomField>
    <fullName>data__c</fullName>
    <label>Datos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>