force-app/main/default/objects/IntegrationLog__c/fields/error__c.field-meta.xml
<CustomField>
    <fullName>error__c</fullName>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>