force-app/main/default/objects/IntegrationLog__c/fields/handler_class__c.field-meta.xml
<CustomField>
    <fullName>handler_class__c</fullName>
    <label>Clase para Resolución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>