force-app/main/default/objects/IntegrationLog__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>Se guarda la cabecera de los campos que se emplean en el Platform event &apos;CM Creation Event&apos;</description>
    <label>Cabecera</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>