force-app/main/default/objects/IntegrationLog__c/fields/identifier__c.field-meta.xml
<CustomField>
    <fullName>identifier__c</fullName>
    <externalId>true</externalId>
    <label>Identificador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>