force-app/main/default/objects/IntegrationLog__c/fields/retries__c.field-meta.xml
<CustomField>
    <fullName>retries__c</fullName>
    <label>Reintentos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>