force-app/main/default/objects/IntegrationLog__c/fields/system__c.field-meta.xml
<CustomField>
    <fullName>system__c</fullName>
    <label>Sistema</label>
    <length>255</length>
    <type>Text</type>
</CustomField>