force-app/main/default/objects/IntegrationLog__c/listViews/Filtro_por_ID.listView-meta.xml
<ListView>
    <fullName>Filtro_por_ID</fullName>
    <columns>NAME</columns>
    <columns>error__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>identifier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>identifier__c</field>
        <operation>equals</operation>
        <value>5000N00001cXU9FQAW</value>
    </filters>
    <label>Filtro por ID</label>
</ListView>